@@ -22,8 +22,10 @@ import com.google.common.io.Closeables;
 import com.netflix.exhibitor.core.Exhibitor;
 import com.netflix.exhibitor.core.activity.Activity;
 import com.netflix.exhibitor.core.activity.ActivityLog;
+import com.netflix.exhibitor.core.activity.NOPRepeatingActivity;
 import com.netflix.exhibitor.core.activity.QueueGroups;
 import com.netflix.exhibitor.core.activity.RepeatingActivity;
+import com.netflix.exhibitor.core.activity.RepeatingActivityImpl;
 import com.netflix.exhibitor.core.config.ConfigListener;
 import com.netflix.exhibitor.core.config.EncodedConfigParser;
 import com.netflix.exhibitor.core.config.InstanceConfig;
@@ -75,7 +77,18 @@ public class BackupManager implements Closeable
                 return true;
             }
         };
-        repeatingActivity = new RepeatingActivity(exhibitor.getLog(), exhibitor.getActivityQueue(), QueueGroups.IO, activity, config.getInt(IntConfigs.BACKUP_PERIOD_MS));
+
+        int backupPeriodMs = config.getInt(IntConfigs.BACKUP_PERIOD_MS);
+        RepeatingActivity localRepeatingActivity;
+        if ( backupPeriodMs > 0 )
+        {
+            localRepeatingActivity = new RepeatingActivityImpl(exhibitor.getLog(), exhibitor.getActivityQueue(), QueueGroups.IO, activity, backupPeriodMs);
+        }
+        else
+        {
+            localRepeatingActivity = new NOPRepeatingActivity();
+        }
+        repeatingActivity = localRepeatingActivity;
     }
 
     /**
