@@ -20,7 +20,6 @@ import com.google.common.collect.Lists;
 import com.google.common.io.Closeables;
 import org.testng.Assert;
 import org.testng.annotations.Test;
-import java.text.DecimalFormat;
 import java.util.List;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
@@ -202,7 +201,7 @@ public class TestActivityQueue
                     return true;
                 }
             };
-            repeating = new RepeatingActivity(null, queue, QueueGroups.MAIN, activity, DELAY);
+            repeating = new RepeatingActivityImpl(null, queue, QueueGroups.MAIN, activity, DELAY);
             repeating.start();
 
             long                    start = System.currentTimeMillis();
