@@ -2,6 +2,10 @@
 =======================
 * Issue 106: Disable Chrome textarea resizing in the modify node dialog.
 
+* Issue 105: Exhibitor did not prevent users from setting 0 (or a negative number) for config values
+such as Live Check. If you did, it would cause those features to turn off. Now, a minimum value is
+enforced internally for all such time values.
+
 1.4.5 - January 9, 2013
 =======================
 * Issue 103: S3 buckets outside of us-east-1 now require an "endpoint" to be set. For the standalone
